[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dl-wandb"
version = "0.0.1"
description = "Weights & Biases integration layer for dl-core."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dl-core",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.entry-points."dl_core.init_extensions"]
wandb = "dl_wandb.init_extension:WandbInitExtension"

[tool.uv.sources]
dl-core = { path = "../dl-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/dl_wandb"]
